Iphone Background image distortion fixed

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@
 
 html {
     overflow-x: hidden !important;
+    font-family: "Playfair Display", Georgia, serif;
 }
 
-body {
+
+/* body {
     font-family: "Playfair Display", Georgia, serif;
     overflow-x: hidden !important;
     background-image: url(../images/about-us.jpg);
@@ -18,16 +20,25 @@ body {
     background-size: cover;
     position: relative;
     min-height: 100vh;
+} */
+
+body {
+    font-family: "Playfair Display", Georgia, serif;
+    overflow-x: hidden !important;
 }
 
 body::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(43, 43, 43, 0.5);
+    /* background: rgba(43, 43, 43, 0.5); */
+    background-image: url(../images/about-us.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     z-index: -1;
 }
 
